--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
               <li class="header__inner-nav__list-li"><a href="#">Отзывы</a></li>
             </ul>
           </nav>
-          <button class="header-btn sobes-btn--blue">Запись на собеседование</button>
+          <button class="header-btn record-btn--blue">
+            Запись на собеседование
+          </button>
+        </div>
+        <div class="header__mobile">
+          <img src="img/header/mobile/loop.svg" alt="">
+          <img src="img/header/mobile/cart.svg" alt="">
+          <img src="img/header/mobile/logo.svg" alt="">
+          <img src="img/header/mobile/profile.svg" alt="">
+          <div class="header__mobile-menu"></div>
         </div>
       </div>
     </header>
@@ -54,8 +63,8 @@
             записывайся на собеседование!
           </div>
           <div class="intro__buttons">
-            <button class="why-btn">Почему мы</button>
-            <button class="sobes-btn">Записаться на собеседование</button>
+            <button class="green-btn">Почему мы</button>
+            <button class="record-btn">Записаться на собеседование</button>
           </div>
         </div>
       </div>
@@ -87,8 +96,8 @@
               </p>
             </div>
             <div class="info__buttons">
-              <button class="more-info">Узнать больше</button>
-              <button class="sobes-btn--blue">
+              <button class="more-info-btn">Узнать больше</button>
+              <button class="record-btn--blue">
                 Записаться на собеседование
               </button>
             </div>
@@ -150,6 +159,34 @@
                 Выполнять обещания и интересоваться потребностями своих клиентов
               </div>
             </div>
+            <div class="inner-content__card">
+              <img
+                src="img/values/card-four.png"
+                alt=""
+                class="inner-content__card-img"
+              />
+              <div class="inner-content__hexogen">4</div>
+              <div class="inner-content__card-title">
+                Быть увлеченным и ответственным
+              </div>
+              <div class="inner-content__card-subtitle">
+                Вкладывать душу в то, что делаешь и получать от работы
+                удовольствие.
+              </div>
+            </div>
+            <div class="inner-content__card">
+              <img
+                src="img/values/card-five.png"
+                alt=""
+                class="inner-content__card-img"
+              />
+              <div class="inner-content__hexogen">5</div>
+              <div class="inner-content__card-title">Развиваться</div>
+              <div class="inner-content__card-subtitle">
+                Постоянно расти личностно и профессионально для достижения
+                поставленных целей.
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -206,7 +243,7 @@
                 Экономим на бумаге и угадываем фильмы: дайджест видео марта 2022
                 года
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -217,7 +254,7 @@
                 class="slider__card-img"
               />
               <div class="slider__card-text">Изменения 2022 года</div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -230,7 +267,7 @@
               <div class="slider__card-text">
                 Почему стоит работать программистом в 2022 году
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -244,7 +281,7 @@
                 Автоматизированный УСН и путевые листы: дайджест новостей за
                 март 2022. Автоматизированный УСН и путевые листы
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -258,7 +295,7 @@
                 Автоматизированный УСН и путевые листы: дайджест новостей за
                 март 2022. Автоматизированный УСН и путевые листы
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -272,7 +309,7 @@
                 Автоматизированный УСН и путевые листы: дайджест новостей за
                 март 2022. Автоматизированный УСН и путевые листы
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -286,7 +323,7 @@
                 Автоматизированный УСН и путевые листы: дайджест новостей за
                 март 2022. Автоматизированный УСН и путевые листы
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -300,7 +337,7 @@
                 Автоматизированный УСН и путевые листы: дайджест новостей за
                 март 2022. Автоматизированный УСН и путевые листы
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -314,7 +351,7 @@
                 Автоматизированный УСН и путевые листы: дайджест новостей за
                 март 2022. Автоматизированный УСН и путевые листы
               </div>
-              <button class="slider__card-btn sobes-btn--blue">
+              <button class="slider__card-btn record-btn--blue">
                 Перейти к статье
               </button>
             </div>
@@ -330,7 +367,7 @@
           <div class="practice__inner-title">
             Ты студент и хочешь устроиться на практику?
           </div>
-          <button class="practice__inner-btn why-btn">Оставить заявку</button>
+          <button class="practice__inner-btn green-btn">Оставить заявку</button>
         </div>
       </div>
     </div>
@@ -654,11 +691,16 @@
             ></textarea>
             <div class="form-btns">
               <div class="custom-file-upload">
-                <label for="resume-upload" class="sobes-btn form-file"
-                  >Прикрепить резюме <img src="img/interview/clip.svg" alt=""></label>
+                <label for="resume-upload" class="record-btn form-file"
+                  >Прикрепить резюме <img src="img/interview/clip.svg" alt=""
+                /></label>
                 <input type="file" id="resume-upload" class="file-input" />
               </div>
-              <input type="submit" class="why-btn form-submit" value="Записаться" />
+              <input
+                type="submit"
+                class="green-btn form-submit"
+                value="Записаться"
+              />
             </div>
           </form>
         </div>
