--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           </button>
         </div>
         <div class="header__mobile">
-          <img src="img/header/mobile/loop.svg" alt="">
-          <img src="img/header/mobile/cart.svg" alt="">
-          <img src="img/header/mobile/logo.svg" alt="">
-          <img src="img/header/mobile/profile.svg" alt="">
+          <img src="img/header/mobile/loop.svg" alt="" />
+          <img src="img/header/mobile/cart.svg" alt="" />
+          <img src="img/header/mobile/logo.svg" alt="" />
+          <img src="img/header/mobile/profile.svg" alt="" />
           <div class="header__mobile-menu"></div>
         </div>
       </div>
@@ -641,6 +641,7 @@
             <div class="interview__form-title">Записаться на собеседование</div>
 
             <div class="form-group">
+              <span class="error-message"></span>
               <input
                 type="text"
                 class="form-input"
@@ -650,16 +651,19 @@
             </div>
 
             <div class="form-group">
+              <span class="error-message"></span>
               <input type="text" class="form-input" placeholder="Телефон" />
               <div class="validation-icon"></div>
             </div>
 
             <div class="form-group">
+              <span class="error-message"></span>
               <input type="text" class="form-input" placeholder="Email" />
               <div class="validation-icon"></div>
             </div>
 
             <div class="form-group">
+              <span class="error-message"></span>
               <input
                 type="text"
                 class="form-input"
@@ -710,5 +714,6 @@
     <script src="js/slider.js"></script>
     <script src="js/select.js"></script>
     <script src="js/validation.js"></script>
+    <script src="js/error.js"></script>
   </body>
 </html>
